[package]
name = "xdg_desktop_portal_oceania"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.189"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.zbus]
version = "3.14.1"
default-features = false
features = ["tokio"]

[dependencies.tokio]
version = "1.33.0"
features = ["macros", "rt", "rt-multi-thread"]
